Added Restart button

--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <div id='game'>
         <button onclick='makeOne()' width='200' height='30'>Add PacMan</button>
         <button onclick='update()' width='200' height='30'>Start Game</button>
-
+        <button onclick="location.reload()">Restart</button>
     </div>
 </body>
 
